# AuthStar

./: .dockerignore  .gitignore  AI_AGENT_AUTHZ_TECHNICAL_FEASIBILITY.md  AI_IAM_ARCHITECTURE_CONSTRAINTS.md  ARCHITECTURE_GAP_ANALYSIS.md  CEO_STRATEGIC_ANALYSIS.md  DISTRIBUTED_SYSTEM_IMPROVEMENTS.md  E2E_TEST_GAP_ANALYSIS.md  EIAA_DEEP_RESEARCH_AND_GAP_ANALYSIS.md  EIAA_OAUTH2_AS_RESEARCH.md  FUNCTIONAL_FIXES.md  INNOVATION_IMPLEMENTATION_SUMMARY.md  LICENSE  MASTER_ISSUE_TRACKER.md  PHASE_6_IMPLEMENTATION_GUIDE.md  POLICY_BUILDER_DESIGN.md  POLICY_BUILDER_OPTIMIZATIONS_IMPLEMENTED.md  POLICY_BUILDER_UI_DESIGN.md  PRINCIPAL_ARCHITECT_REVIEW.md  PRODUCT_OWNER_ANALYSIS.md  PROGRESS.md  README.md  RELEASE_AUDIT.md  RELEASE_READINESS_REPORT.md  ROBUSTNESS_ROADMAP.md  SPRINT_CLOSURE_REPORT.md  TECHNICAL_DOCUMENTATION.md  UNIFIED_POLICY_BUILDER_DESIGN.md  UX_FRONTEND_AUDIT.md  docker-compose-root.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.runtime  README.md  build_errors.txt  build_log.txt  error.json  error_log.txt  errors.json  errors2.txt  errors3.txt  errors4.txt  errors5.txt  errors6.txt  errors7.txt  errors_full.txt  router_errors.txt  seed_dev.sql  test_errors.txt  test_pg.js  test_pg_clean.js
backend/.cargo/: config.toml
backend/.keys/: private.pem  public.pem
backend/.sqlx/: query-04c5f03e7c995c4dc855b1b8dc9633d62306414b8499c84930fbb975e2050ca5.json  query-0560f83efd88d4f4658946902837d312952f4a4c68e69d6c07afd7de63a272fe.json  query-057e904f3359451033832a1b6d43442c047378d37d2e9d9918feb9e2e5f4cdfb.json  query-063448ebce558203e5d55df9707ca54b0a9c08b40fa2162753b42e5a07539d81.json  query-0aca6e7a84ab02e1dfd594c22ac00dc12a77c4a4a70896ae3598b81385eff2de.json  query-140a3e9b6ee5d443ed2c2960a3f0237e2be2b7f33e84340d4eca2be9a1e45e99.json  query-16b18738d97ff0d5a6646f74b4a7017a0dad948ba519cf2626ddc7864765d176.json  query-19bc40059162b6c9cff95498a0380d72b3e031289ff1f627b9f7422be2097ecc.json  query-1ada2fe2c6e7b528bc2fef167cba82f2788115b2642e6a4961285f16298aee57.json  query-1c17ec9398c8c41e7835507745ba11e902756de2d6e16e876c0e96170d1c844a.json  query-1c18a5961de2b5a40493b09fd34e366ea91f57cdc5cb6a91ee783c3cd40ea5e9.json  query-1c9670c83b940d8c3a60fb899514bae85c78ffa02020c278ad5f229daa118529.json  query-215797d4cacb6486a75537c28afc0a5a8b7dcafee6bc3f7aecf8818de18dbb02.json  query-2d0f4cc5f3921e8dad3b20f373a4d144c0b3dcb10d785acdf90de24c38596ea0.json  query-2edce880495eadd92f4ebefc63090aa9806cab7fe3232873621398a7d85a3919.json  query-2f6b977a72155dbb2ad85b3ade386f7bdbf2a2db438154837a71ed279791e9bb.json  query-32ea08c103a9e2ed11f5af28dc9b3125168161e12d0470c16d7aa6fdc1a9488c.json  query-34a43d6588bc171a1b006294dc76e20ce2b5f4a34e400d5a7e52842703334a2a.json  query-3577798d87cc285554ed457004b9b06a663fcc76283796a2112af01548c1cb92.json  query-381b4815d2bdf154c2c5918dfe5b3b699d6754e2de830e9f8a747f8b6ebc2be9.json  query-3d0f00782c7676be8103246bf8dcbdb4b0444d0fe08695f0e685657b9aa0f5d6.json  query-3ea28a68b5e8e3cd74a7a116f9cf0e8b7f48b9e03166316cddec15e83a1d8aef.json  query-3f55e086ec7356b29c476be3f798a2c685a74f5e6580ca39d801e5be4e5f7711.json  query-42d72e680575df7090dae239356247811e75f57fe3372f1589c80668fa8c3be2.json  query-43086d4e216c005f10c11c72511ca2426fdbb09c460ec0a6dfbfafc8ec805663.json  query-43b997c44dcdce0da991a4e26bc65a8027a32cdeee12d2bc5aceb0811da80868.json  query-4429af36720724d482d638de6fe77df344c1f4178c168724ee6f2255f5c415b3.json  query-45ebe27fbefbaae67ddeb4bdcc31aa739df41fbba7107caf4c7c59273927ec67.json  query-49c2d80b81d25f0c2582e07b5b41c6d0d38c5ea4a4d4df06b33660f211038deb.json  query-50459c738ef69f61e05fa339ab60d52e6b87bacf8a3d5dc437e3a33d43e4d0af.json  query-519be1075a966b389d70b8eb0142adb3338dc0bf295ba013f47c7a4b6e82d805.json  query-52839fea7de0f07c00720d382805946213b561d3ecd98c17563ddab7d1950335.json  query-573e48c2044de5878b0fa453bf8ba1a5ee32bbe34491b56e79e5b367ffb60439.json  query-5ffc73712809614cd4c16858061cb38216ec3eecd8ea92062b6045b106560ac4.json  query-61a05e9c8758a6512836e6251053c4108297b9ff221c24a183a8cc14d0e4ad3d.json  query-623f069318e9583ec8e8b8f2332f88b4eb13596e32e812c893a7e9f4dba743cd.json  query-64962b1bd0cf9b105bdb256f8d7d61d9ce5aa63344545bdbb7be3a869dce653a.json  query-66afeed7336b8295c0367091e9b9526f11f6c643c78690be49cc4086b4fd2d14.json  query-68e6a77621557685b48a89be6db5c4d6d744b65e6898435f4ee98c8d40b77881.json  query-70912464abc5724fdb82294b8c19706947062c641185a427e7c84803f06c8d5f.json  (+45 more)
backend/crates/api_server/: Cargo.toml
backend/crates/api_server/src/: bootstrap.rs  config.rs  lib.rs  main.rs  router.rs  state.rs  telemetry.rs
backend/crates/api_server/tests/: admin_flows.rs  api_routes_test.rs  audit_load_test.rs  auth_flow_integration.rs  cross_tenant_test.rs  e2e_backend_test.rs  hardening_tests.rs  multi_tenant_test.rs  oauth2_integration.rs  policies_api.rs  sdk_manifest_test.rs  session_revocation_test.rs  user_factors_test.rs
backend/crates/attestation/: Cargo.toml
backend/crates/attestation/src/: lib.rs
backend/crates/auth_core/: Cargo.toml
backend/crates/auth_core/src/: jwt.rs  lib.rs  oauth_types.rs  password.rs
backend/crates/billing_engine/: Cargo.toml
backend/crates/billing_engine/src/: lib.rs  models.rs
backend/crates/billing_engine/tests/: billing_service_test.rs
backend/crates/capsule_compiler/: Cargo.toml
backend/crates/capsule_compiler/src/: ast.rs  lib.rs  lowerer.rs  policy_compiler.rs  verifier.rs
backend/crates/capsule_runtime/: Cargo.toml
backend/crates/capsule_runtime/src/: lib.rs  wasm_host.rs
backend/crates/db_migrations/: Cargo.toml  build.rs
backend/crates/email_service/: Cargo.toml
backend/crates/grpc_api/: Cargo.toml  build.rs
backend/crates/identity_engine/: Cargo.toml
backend/crates/keystore/: Cargo.toml
backend/crates/migrator/: Cargo.toml
backend/crates/org_manager/: Cargo.toml
backend/crates/risk_engine/: Cargo.toml
backend/crates/runtime_service/: Cargo.toml
backend/crates/shared_types/: Cargo.toml
backend/protos/: runtime.proto
backend/scripts/: lint_tenant_scope.sh
sdks/python/: README.md  pyproject.toml
sdks/python/idaas/: client.py
(+513 files in other folders)
