[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idaas-client"
version = "1.0.0"
description = "Official Python SDK for IDaaS Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["idaas", "authentication", "oauth", "mfa", "identity"]
authors = [
  {name = "IDaaS Team"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/idaas/python-sdk"
Documentation = "https://docs.idaas.example.com"
Repository = "https://github.com/idaas/python-sdk"
