[package]
name = "capsule_compiler"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
keystore = { path = "../keystore" }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
wasm-encoder = "0.38"
sha2 = { workspace = true }
hex = { workspace = true }
