[package]
name = "grpc_api"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
protoc-bin-vendored = "3.0.0"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
