[package]
name = "keystore"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
