[package]
name = "org_manager"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

# Time
chrono = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# JWT for invitation tokens
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
nanoid = { workspace = true }
