[package]
name = "risk_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
anyhow = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Shared types
shared_types = { path = "../shared_types" }

# IP/Geo lookup (optional, feature-gated)
maxminddb = { version = "0.24", optional = true }

# Hashing
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = []
maxmind = ["maxminddb"]
