[package]
name = "runtime_service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "runtime_service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
keystore = { path = "../keystore" }
attestation = { path = "../attestation" }
capsule_compiler = { path = "../capsule_compiler" }
capsule_runtime = { path = "../capsule_runtime" }
grpc_api = { path = "../grpc_api" }
ed25519-dalek.workspace = true
bincode.workspace = true
sha2.workspace = true
sqlx = { workspace = true }
chrono = { workspace = true }
