[package]
name = "runtime_service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "runtime_service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
keystore = { path = "../keystore" }
attestation = { path = "../attestation" }
capsule_compiler = { path = "../capsule_compiler" }
capsule_runtime = { path = "../capsule_runtime" }
grpc_api = { path = "../grpc_api" }
ed25519-dalek.workspace = true
bincode.workspace = true
sha2.workspace = true
sqlx = { workspace = true }
chrono = { workspace = true }

# GAP-4 FIX: OpenTelemetry distributed tracing
# Matches the versions used by api_server so both services export to the same collector.
# The runtime service extracts the W3C traceparent from incoming gRPC metadata and
# creates a child span, enabling end-to-end trace correlation in Jaeger/Grafana Tempo.
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = { version = "0.14" }
tracing-opentelemetry = { version = "0.23" }
