[package]
name = "shared_types"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
nanoid = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
